# ainews-clustering

./: .gitignore  main.py  pyproject.toml
dev/ADR/: CHANGELOG-adr-006-integration.md  adr-001-embeddings-strategy.md  adr-002-semantic-dimensions-mapping.md  adr-003-topographic-clustering-strategy.md  adr-004-server-side-compute-offload.md  adr-005-semantic-context-extraction.md  adr-006-entity-context-extraction.md  adr-010-end-to-end-semantic-atlas-pipeline.md
docs/: Gxx_report.doc
docs/knowledge/: combine_lectures.py  master.md
docs/training/: 03a_Clustering_Part1.txt
latex/: Gxx_report.aux  Gxx_report.bbl  Gxx_report.bcf  Gxx_report.blg  Gxx_report.fdb_latexmk  Gxx_report.fls  Gxx_report.out  Gxx_report.run.xml  Gxx_report.tex  clustering.bib  hugo-sergio_report.aux  hugo-sergio_report.bbl  hugo-sergio_report.bbl-SAVE-ERROR  hugo-sergio_report.bcf  hugo-sergio_report.blg  hugo-sergio_report.fdb_latexmk  hugo-sergio_report.fls  hugo-sergio_report.out  hugo-sergio_report.run.xml  hugo-sergio_report.tex  sections.tar
latex/sections/: 01_data_profiling.tex  02_data_representation.tex  03_clustering.tex  04_outlier_analysis.tex  abstract.tex  appendix.tex  references.tex
notes/: dataset_description.md  paper-exploration.md  paper-outline.md
sergio/: Gxx_report.tex
sergio/sections/: 01_data_profiling.tex  02_data_representation.tex  03_clustering.tex  abstract.tex  appendix.tex  project_statement_full.tex
src/modules/: __init__.py  database.py
src/notebooks/: Gxx_notebook.ipynb
src/scripts/: apply_sql.py  exploration.py  explore_spotlight.py  (+2 more)
(+604 files in other folders)
