[project]
name = "ainews-clustering"
version = "0.1.0"
description = "News dataset exploration with clustering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "ipython>=8.0.0",
    "scikit-learn>=1.5.2",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "numba>=0.60",
    "llvmlite>=0.43",
    "renumics-spotlight>=1.7.0",
    "openai>=2.15.0",
]
